Add StorageCredential to ResolvingFileIO